k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec:
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
       app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:15.0
          ports:
            - containerPort: 5432
          env: #variaveis para o postgre
          - name: POSTGRES_BD
            value: "kubenews" 
          - name: POSTGRES_USER
            value: "kubenews" 
          - name: POSTGRES_PASSWORD
            value: "Pg#123" 
---

apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector:
    app: postgre
  ports:
  - port: 5432
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 4 
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
       app: web
      annotations: #
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: web
          image: tpbsdocker/kube-news:latest 
          ports:
            - containerPort: 8080
          env: #variaveis para o postgre
          - name: DB_DATABASE
            value: "kubenews" 
          - name: DB_USERNAME
            value: "kubenews" 
          - name: DB_PASSWORD
            value: "Pg#123" 
          - name: DB_HOST
            value: "postgre"

---

apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 8080 # direciona para a porta do pod
  type: LoadBalancer
  #type: LoadBalancer
