k8s/ingress-kube-news.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-news-ingress #nome do ingress
  namespace: kube-news
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kube-news.net #endereço do host alvo
    http:
      paths:
       - path: /
         backend:
          service:
            name: web
            port:
              number: 80
